code Correction for batchstarttime and customDropdownselectedvalue

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralBatchMaster/CreateEditGeneralBatch.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralBatchMaster/CreateEditGeneralBatch.cshtml
@@ -69,7 +69,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.BatchStartTime, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.BatchStartTime, new { @class = "form-label"})
                                         @Html.TextBoxFor(x => x.BatchStartTime, new { @class = "form-control", type = "time" })
                                         @Html.ValidationMessageFor(x => x.BatchStartTime)
                                     </div>
