--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseJoiningCode/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseJoiningCode/_List.cshtml
@@ -21,8 +21,9 @@
                         <tr>
                             <td>@item.JoiningCode</td>
                             <td>
-                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsExpired)
+                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", !item.IsExpired)
                             </td>
+
                             <td class="text-center data-action">
                                 @*  <a href="../@controllerName/SendDetails" title="Send" class="btn btn-sm btn-soft-success btn-circle"><i data-feather="send" style="width: 20px; height: 20px;"></i></a> *@
                                 @if (item.IsExpired==false)
