--- a/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/theme-brown.css
+++ b/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/theme-brown.css
@@ -75,6 +75,10 @@ body.dark-topbar .navbar-custom-menu .has-submenu:hover a span {
     border-color: var(--primaryButtonBorderColor) !important;
 }
 
+.auth-logo {
+    height: 70px;
+}
+
 .btn-success, .btn-success:hover {
     color: var(--primaryButtonTextColor) !important;
     background-color: var(--primaryButtonBackgroundColor) !important;
