--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/UserProfile.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/UserProfile.cshtml
@@ -1,1 +1,168 @@
-﻿
+﻿@using Coditech.Admin.Utilities;
+@using Coditech.Common.API.Model;
+@{
+    ViewBag.Title = "User Profile";
+}
+<div class="page-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="dastone-profile">
+                            <div class="row">
+                                <div class="col-lg-4 align-self-center mb-3 mb-lg-0">
+                                    <div class="dastone-profile-main">
+                                        <div class="dastone-profile-main-pic">
+                                            <img src="https://mannatthemes.com/dastone/default/assets/images/users/user-4.jpg" alt="" height="110" class="rounded-circle">
+                                            <span class="dastone-profile_main-pic-change">
+                                                <i class="fas fa-camera"></i>
+                                            </span>
+                                        </div>
+                                        <div class="dastone-profile_user-detail">
+                                            <h5 class="dastone-user-name">Anirudha Kanade</h5>
+                                            <p class="mb-0 dastone-user-name-post">UI/UX Designer, India</p>
+                                        </div>
+                                    </div>
+                                </div><!--end col-->
+
+                                <div class="col-lg-4 ms-auto align-self-center">
+                                    <ul class="list-unstyled personal-detail mb-0">
+                                        <li class=""><i class="ti ti-mobile me-2 text-secondary font-16 align-middle"></i> <b> phone </b> : +91 23456 78910</li>
+                                        <li class="mt-2"><i class="ti ti-email text-secondary font-16 align-middle me-2"></i> <b> Email </b> : mannat.theme@gmail.com</li>
+                                        <li class="mt-2">
+                                            <i class="ti ti-world text-secondary font-16 align-middle me-2"></i> <b> Website </b> :
+                                            <a href="https://mannatthemes.com/" class="font-14 text-primary">https://mannatthemes.com</a>
+                                        </li>
+                                    </ul>
+
+                                </div><!--end col-->
+                                <div class="col-lg-4 align-self-center">
+                                    <div class="row">
+                                        
+                                    </div><!--end row-->
+                                </div><!--end col-->
+                            </div><!--end row-->
+                        </div><!--end f_profile-->
+                    </div><!--end card-body-->
+                </div> <!--end card-->
+            </div><!--end col-->
+        </div><!--end row-->
+
+        <div class="row">
+            <div class="col-lg-6 col-xl-6">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h4 class="card-title">Personal Information</h4>
+                            </div><!--end col-->
+                        </div>  <!--end row-->
+                    </div><!--end card-header-->
+                    <div class="card-body">
+                        <div class="form-group row">
+                            <label class="col-xl-3 col-lg-3 text-end mb-lg-0 align-self-center">First Name</label>
+                            <div class="col-lg-9 col-xl-8">
+                                <input class="form-control" type="text" value="Rosa">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-xl-3 col-lg-3 text-end mb-lg-0 align-self-center">Last Name</label>
+                            <div class="col-lg-9 col-xl-8">
+                                <input class="form-control" type="text" value="Dodson">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-xl-3 col-lg-3 text-end mb-lg-0 align-self-center">Company Name</label>
+                            <div class="col-lg-9 col-xl-8">
+                                <input class="form-control" type="text" value="MannatThemes">
+                                <span class="form-text text-muted font-12">We'll never share your email with anyone else.</span>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label class="col-xl-3 col-lg-3 text-end mb-lg-0 align-self-center">Contact Phone</label>
+                            <div class="col-lg-9 col-xl-8">
+                                <div class="input-group">
+                                    <span class="input-group-text"><i class="las la-phone"></i></span>
+                                    <input type="text" class="form-control" value="+123456789" placeholder="Phone" aria-describedby="basic-addon1">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-xl-3 col-lg-3 text-end mb-lg-0 align-self-center">Email Address</label>
+                            <div class="col-lg-9 col-xl-8">
+                                <div class="input-group">
+                                    <span class="input-group-text"><i class="las la-at"></i></span>
+                                    <input type="text" class="form-control" value="rosa.dodson@demo.com" placeholder="Email" aria-describedby="basic-addon1">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-xl-3 col-lg-3 text-end mb-lg-0 align-self-center">Website Link</label>
+                            <div class="col-lg-9 col-xl-8">
+                                <div class="input-group">
+                                    <span class="input-group-text"><i class="la la-globe"></i></span>
+                                    <input type="text" class="form-control" value=" https://mannatthemes.com/" placeholder="Email" aria-describedby="basic-addon1">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-xl-3 col-lg-3 text-end mb-lg-0 align-self-center">USA</label>
+                            <div class="col-lg-9 col-xl-8">
+                                <select class="form-select">
+                                    <option>London</option>
+                                    <option>India</option>
+                                    <option>USA</option>
+                                    <option>Canada</option>
+                                    <option>Thailand</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-lg-9 col-xl-8 offset-lg-3">
+                                <button type="submit" class="btn btn-sm btn-outline-primary">Submit</button>
+                                <button type="button" class="btn btn-sm btn-outline-danger">Cancel</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!--end col-->
+            <div class="col-lg-6 col-xl-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">Change Password</h4>
+                    </div><!--end card-header-->
+                    <div class="card-body">
+                        <div class="form-group row">
+                            <label class="col-xl-3 col-lg-3 text-end mb-lg-0 align-self-center">Current Password</label>
+                            <div class="col-lg-9 col-xl-8">
+                                <input class="form-control" type="password" placeholder="Password">
+                                <a href="#" class="text-primary font-12">Forgot password ?</a>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-xl-3 col-lg-3 text-end mb-lg-0 align-self-center">New Password</label>
+                            <div class="col-lg-9 col-xl-8">
+                                <input class="form-control" type="password" placeholder="New Password">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-xl-3 col-lg-3 text-end mb-lg-0 align-self-center">Confirm Password</label>
+                            <div class="col-lg-9 col-xl-8">
+                                <input class="form-control" type="password" placeholder="Re-Password">
+                                <span class="form-text text-muted font-12">Never share your password.</span>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-lg-9 col-xl-8 offset-lg-3">
+                                <button type="submit" class="btn btn-sm btn-outline-primary">Change Password</button>
+                                <button type="button" class="btn btn-sm btn-outline-danger">Cancel</button>
+                            </div>
+                        </div>
+                    </div><!--end card-body-->
+                </div><!--end card-->
+            </div> <!-- end col -->
+        </div><!--end row-->
+    </div><!-- container -->
+</div>
