Code correction for site.css and modulelist

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
@@ -13,7 +13,7 @@
 <li class="has-submenu">
     <a href="#">
         <span>
-            <i class="fas fa-th"></i>
+            <i class="fas fa-th" style="font-size: 25px !important;"></i>
         </span>
     </a>
     <ul class="submenu">
