--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
@@ -11,9 +11,9 @@
 }
 
 <li class="has-submenu">
-    <a href="#">
+    <a href="#" class="dashboard-menu-list">
         <span>
-            <i class="fas fa-th" style="font-size: 25px !important;"></i>
+            <i class="fas fa-th"></i>
         </span>
     </a>
     <ul class="submenu">
