Code Check in for User Profile

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Profile.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Profile.cshtml
@@ -26,6 +26,10 @@
         <circle cx="12" cy="7" r="4"></circle>
         </svg> Profile
         </a> *@
+        <a class="dropdown-item" href="~/user/UserProfile">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user align-self-center icon-xs icon-dual me-1"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+            User Profile
+        </a>
         <a class="dropdown-item" href="~/user/changepassword">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings align-self-center icon-xs icon-dual me-1">
                 <circle cx="12" cy="12" r="3"></circle>
