--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseSmsSetting.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseSmsSetting.cshtml
@@ -4,7 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel smsProviderDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.SMSProvider.ToString(), DropdownName = "GeneralSmsProviderId", DropdownSelectedValue = Model.GeneralSmsProviderId.ToString(), ChangeEvent = $"OrganisationCentre.GetSMSSettingByCentreCode('{Model.OrganisationCentreMasterId}')" };
-    ModelPopUpViewModel sendTestEmailModal = new ModelPopUpViewModel() { ModelPopUpId = "SendDetailsPopupId", ModalContentId = "SendDetailsContentId" };
+    ModelPopUpViewModel sendTestEmail = new ModelPopUpViewModel() { ModelPopUpId = "SendDetailsPopupId", ModalContentId = "SendDetailsContentId" };
 }
 <div class="page-content mt-5">
     <div class="container-fluid">
@@ -43,6 +43,14 @@
                                         @Html.ValidationMessageFor(x => x.CentreCode)
                                     </div>
                                 </div>
+                                <div class="col-lg-2">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsSMSSettingEnabled, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsSMSSettingEnabled, new { @class = "form-check-input" })
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="col-lg-12">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.GeneralSmsProviderId, new { @class = "form-label required" })
@@ -56,32 +64,21 @@
                                         @Html.Partial("~/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseSmsSetting.cshtml", Model)
                                     }
                                 </div>
-                            </div>
-                            <div class="row align-items-center">
-                                <!-- Left Side: Save + Cancel -->
-                                <div class="col text-start">
-                                    <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                                    <a href="../@controllerName/List" class="btn btn-secondary">
-                                        <i class="ft-x"></i> @AdminResources.LabelCancel
-                                    </a>
+                                <div class="col-lg-12 d-flex justify-content-center">
+                                    <div class="mb-6">
+                                        <button type="button"
+                                                class="btn btn-gradient-info"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#@sendTestEmail.ModelPopUpId"
+                                            onclick="OrganisationCentre.SendSmsTestModel('@sendTestEmail.ModalContentId', '@Model.CentreCode', '@Model.OrganisationCentreMasterId')"
+                                                title="Send Test SMS">
+                                            Send Test SMS
+                                        </button>
+                                    </div>
                                 </div>
-
-                                <!-- Center: Send Test SMS -->
-                                <div class="col text-center">
-                                    <button type="button"
-                                            class="btn btn-gradient-info"
-                                            data-bs-toggle="modal"
-                                            data-bs-target="#@sendTestEmailModal.ModelPopUpId"
-                                            onclick="OrganisationTestModel.SendSmsTestModel('@sendTestEmailModal.ModalContentId','@Model.CentreCode','@Model.OrganisationCentreMasterId')"
-                                            title="Send Test SMS">
-                                        Send Test SMS
-                                    </button>
-                                </div>
-
-                                <!-- Right Side Empty (for symmetry if needed) -->
-                                <div class="col"></div>
                             </div>
-
+                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
@@ -89,6 +86,5 @@
         </div>
     </div>
 </div>
+@Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", sendTestEmail)
 <script src="~/js/Coditech/Organisation/OrganisationCentre.js"></script>
-@Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", sendTestEmailModal)
-<script src="~/js/coditech/Organisation/OrganisationTestModel.js"></script>
