--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseWhatsAppSetting.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseWhatsAppSetting.cshtml
@@ -4,7 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel whatsAppProviderDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.WhatsAppProvider.ToString(), DropdownName = "GeneralWhatsAppProviderId", DropdownSelectedValue = Model.GeneralWhatsAppProviderId.ToString(), ChangeEvent = $"OrganisationCentre.GetWhatsAppSettingByCentreCode('{Model.OrganisationCentreMasterId}')" };
-    ModelPopUpViewModel sendTestEmailModal = new ModelPopUpViewModel() { ModelPopUpId = "SendDetailsPopupId", ModalContentId = "SendDetailsContentId" };
+    ModelPopUpViewModel sendTestEmail = new ModelPopUpViewModel() { ModelPopUpId = "SendDetailsPopupId", ModalContentId = "SendDetailsContentId" };
 }
 <div class="page-content mt-5">
     <div class="container-fluid">
@@ -43,6 +43,14 @@
                                         @Html.ValidationMessageFor(x => x.CentreCode)
                                     </div>
                                 </div>
+                                <div class="col-lg-2">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsWhatsAppSettingEnabled, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsWhatsAppSettingEnabled, new { @class = "form-check-input" })
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="col-lg-12">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.GeneralWhatsAppProviderId, new { @class = "form-label required" })
@@ -56,29 +64,18 @@
                                         @Html.Partial("~/Views/Organisation/OrganisationCentre/_OrganisationCentrewiseWhatsAppSetting.cshtml", Model)
                                     }
                                 </div>
-
-                            </div>
-                            <div class="row align-items-center">
-                                <!-- Left Side: Save + Cancel -->
-                                <div class="col text-start">
-                                    <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                                    <a href="../@controllerName/List" class="btn btn-secondary">
-                                        <i class="ft-x"></i> @AdminResources.LabelCancel
-                                    </a>
+                                <div class="col-lg-12 d-flex justify-content-center">
+                                    <div class="mb-6">
+                                        <button type="button"
+                                                class="btn btn-gradient-info"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#@sendTestEmail.ModelPopUpId"
+                                                onclick="OrganisationCentre.SendWhatsAppTestModel('@sendTestEmail.ModalContentId','@Model.CentreCode','@Model.OrganisationCentreMasterId')"
+                                                title="Send Test WhatsApp">
+                                            Send Test WhatsApp
+                                        </button>
+                                    </div>
                                 </div>
-
-                                <!-- Center: Send Test WhatsApp -->
-                                <div class="col text-center">
-                                    <button type="button"
-                                            class="btn btn-gradient-info"
-                                            data-bs-toggle="modal"
-                                            data-bs-target="#@sendTestEmailModal.ModelPopUpId"
-                                            onclick="OrganisationTestModel.SendWhatsAppTestModel('@sendTestEmailModal.ModalContentId','@Model.CentreCode','@Model.OrganisationCentreMasterId')"
-                                            title="Send Test WhatsApp">
-                                        Send Test WhatsApp
-                                    </button>
-                                </div>
-                                <div class="col"></div>
                             </div>
 
                         }
@@ -88,6 +85,5 @@
         </div>
     </div>
 </div>
+@Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", sendTestEmail)
 <script src="~/js/Coditech/Organisation/OrganisationCentre.js"></script>
-@Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", sendTestEmailModal)
-<script src="~/js/coditech/Organisation/OrganisationTestModel.js"></script>
