--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseJoiningCode/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseJoiningCode/CreateEdit.cshtml
@@ -35,7 +35,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Quantity, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.Quantity, new { @class = "form-control", onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @Html.TextBoxFor(x => x.Quantity, new {  @class = "form-control", onkeypress = "return CoditechCommon.AvoidSpacing()"  , min="1"})
                                         @Html.ValidationMessageFor(x => x.Quantity)
                                     </div>
                                 </div>
