check age validation

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
@@ -78,7 +78,7 @@
             }
             else
             {
-                @Html.TextBoxFor(x => x.Age, new { @class = "form-control", onkeypress = "return CoditechCommon.ValidNumeric()" })
+                @Html.TextBoxFor(x => x.Age, new { @class = "form-control", @readonly = "true", onkeypress = "return CoditechCommon.ValidNumeric()" })
             }
             @Html.ValidationMessageFor(x => x.Age)
         </div>
