--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/UserProfile.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/UserProfile.cshtml
@@ -89,17 +89,17 @@
                             <div class="form-group row">
                                 <div class="col-lg-6 mb-4">
                                     @Html.LabelFor(x => x.FirstName, new { @class = "form-label required" })
-                                    @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control" })
+                                    @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control", @readonly = "true" })
                                     @Html.ValidationMessageFor(x => x.FirstName)
                                 </div>
                                 <div class="col-lg-6 mb-4">
                                     @Html.LabelFor(x => x.LastName, new { @class = "form-label required" })
-                                    @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
+                                    @Html.TextBoxFor(x => x.LastName, new { @class = "form-control", @readonly = "true" })
                                     @Html.ValidationMessageFor(x => x.LastName)
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     @Html.LabelFor(x => x.EmailId, new { @class = "form-label required" })
-                                    @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control" })
+                                    @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control", @readonly = "true" })
                                     @Html.ValidationMessageFor(x => x.EmailId)
                                 </div>
                                 <div class="col-lg-4 mb-4">
@@ -110,7 +110,7 @@
                                 <div class="col-lg-2">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.DateOfBirth, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.DateOfBirth, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
+                                        @Html.TextBoxFor(x => x.DateOfBirth, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true", @Isdisabled = "true" })
                                         @Html.ValidationMessageFor(x => x.DateOfBirth)
                                     </div>
                                 </div>
@@ -227,57 +227,53 @@
     //     }
     // });
 
-        // Change Password Handler
-        $('#changePasswordForm').on('submit', function (e) {
-            e.preventDefault();
-            ChangePassword(); // call the function
-        });
 
-        // Initialize DatePicker
-        $("#DateOfBirth").datepicker({
-            changeMonth: true,
-            changeYear: true,
-            yearRange: "-100:+100",
-            dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
-            language: "en",
-            autoSize: true,
-            gotoCurrent: true,
-            clearBtn: true,
-            showButtonPanel: true,
-            closeText: 'Clear',
-            onClose: function (dateText, inst) {
-                if ($(window.event.srcElement).hasClass('ui-datepicker-close')) {
-                    document.getElementById(this.id).value = '';
-                }
-            },
-            minDate: "-80Y",
-            maxDate: new Date()
-        });
 
-        // When DOB changes, calculate age
-        $('#DateOfBirth').change(function () {
-            var now = new Date();
-            var past = new Date($('#DateOfBirth').val());
+        // // Initialize DatePicker
+        // $("#DateOfBirth").datepicker({
+        //     changeMonth: true,
+        //     changeYear: true,
+        //     yearRange: "-100:+100",
+        //     dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
+        //     language: "en",
+        //     autoSize: true,
+        //     gotoCurrent: true,
+        //     clearBtn: true,
+        //     showButtonPanel: true,
+        //     closeText: 'Clear',
+        //     onClose: function (dateText, inst) {
+        //         if ($(window.event.srcElement).hasClass('ui-datepicker-close')) {
+        //             document.getElementById(this.id).value = '';
+        //         }
+        //     },
+        //     minDate: "-80Y",
+        //     maxDate: new Date()
+        // });
 
-            var nowYear = now.getFullYear();
-            var pastYear = past.getFullYear();
+        // // When DOB changes, calculate age
+        // $('#DateOfBirth').change(function () {
+        //     var now = new Date();
+        //     var past = new Date($('#DateOfBirth').val());
 
-            var age = nowYear - pastYear;
-            $('#Age').val(age);
-        });
+        //     var nowYear = now.getFullYear();
+        //     var pastYear = past.getFullYear();
 
-        // When Age changes, auto-fill DOB
-        $('#Age').change(function () {
-            var age = $('#Age').val();
-            var dob = calculateDOB(age);
-            $('#DateOfBirth').datepicker('setDate', dob);
-        });
+        //     var age = nowYear - pastYear;
+        //     $('#Age').val(age);
+        // });
 
-        function calculateDOB(age) {
-            var now = new Date();
-            var birthYear = now.getFullYear() - age;
-            return new Date(birthYear, 0, 1);
-        }
+        // // When Age changes, auto-fill DOB
+        // $('#Age').change(function () {
+        //     var age = $('#Age').val();
+        //     var dob = calculateDOB(age);
+        //     $('#DateOfBirth').datepicker('setDate', dob);
+        // });
+
+        // function calculateDOB(age) {
+        //     var now = new Date();
+        //     var birthYear = now.getFullYear() - age;
+        //     return new Date(birthYear, 0, 1);
+        // }
 
          // View PassWord
          $(".view-password").click(function () {
@@ -289,6 +285,12 @@
                     inputAttribute.attr("type", "password");
                 }
             });
+
+          // Change Password Handler
+        $('#changePasswordForm').on('submit', function (e) {
+            e.preventDefault();
+            ChangePassword(); // call the function
+        });
     });
 
     // Change Password Function
