Code correction for batch for End date added

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralBatchMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralBatchMaster/_List.cshtml
@@ -25,6 +25,7 @@
                             <td>@item.BatchFrequency</td>
                             <td>@item.AssignedBy</td>
                             <td>@item.BatchStartDate.ToCoditechDateFormat()</td>
+                            <td>@item.BatchExpireDate.ToCoditechDateFormat()</td>
                             <td>@item.BatchStartTime.ToCoditechTimeFormat()</td>
                             <td>@item.Duration.ToCoditech24HourTimeFormat()</td>
                             <td>
