--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralBatchMaster/CreateEditGeneralBatch.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralBatchMaster/CreateEditGeneralBatch.cshtml
@@ -9,7 +9,7 @@
 
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, IsDisabled = Model.GeneralBatchMasterId > 0 };
 
-    DropdownViewModel frequencyDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.SchedulerFrequency.ToString(), DropdownName = "BatchFrequency", DropdownSelectedValue = Model.BatchFrequency, ExcludedValues = new string[] { "Recurring" } };
+    DropdownViewModel frequencyDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.SchedulerFrequency.ToString(), DropdownName = "BatchFrequency", DropdownSelectedValue = Model.BatchFrequency, ExcludedValues = new string[] { "Recurring", "Weekly" } };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -68,7 +68,7 @@
                                         @Html.ValidationMessageFor(x => x.BatchFrequency)
                                     </div>
                                 </div>
-                                <div class="row">                              
+                                @* <div class="row">                              
                                     <div class="col-lg-12" id="weeklyDiv">
                                         <div class="mb-3 multiselect-dropdown">
                                             @Html.LabelFor(x => x.SelectedWeekDays, new { @class = "form-label required" })
@@ -76,12 +76,19 @@
                                             @Html.ValidationMessageFor(x => x.SelectedWeekDays)
                                         </div>
                                     </div>
-                                </div>
+                                </div> *@
                                 <div class="col-lg-2">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.BatchStartDate, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.BatchStartDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "readOnly" })
                                         @Html.ValidationMessageFor(x => x.BatchStartDate)
+                                    </div>
+                                </div>
+                                <div class="col-lg-2">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.BatchExpireDate, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.BatchExpireDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.BatchExpireDate)
                                     </div>
                                 </div>
                                 <div class="col-lg-2">
@@ -94,7 +101,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Duration, new { @class = "form-label required" })
-                                        <div class="d-flex gap-2">
+                                        <div class="d-flex gap-3">
                                             @Html.DropDownListFor(x => x.DurationHours,
                                                      new SelectList(Enumerable.Range(0, 12).Select(i => new { Value = i.ToString("D2"), Text = i.ToString("D2") }),
                                                      "Value", "Text"),
@@ -145,18 +152,14 @@
             if (selectedFrequency === "OneTime" && startDate) {
                 $("#BatchExpireDate").datepicker("setDate", startDate);
                 $("#BatchExpireDate").prop("readonly", true);
+                $("#BatchExpireDate").datepicker("option", "beforeShow", function () { return false; });
             } else {
                 $("#BatchExpireDate").prop("readonly", false);
+                $("#BatchExpireDate").datepicker("option", "beforeShow", null);
             }
         }
 
         $(document).ready(function () {
-            updateExpiryDate(); // Ensure correct state on page load
-
-            $("#BatchFrequency").change(function () {
-                updateExpiryDate();
-            });
-
             // Start Date Datepicker
             $("#BatchStartDate").datepicker({
                 changeMonth: true,
@@ -166,8 +169,29 @@
                 autoSize: true,
                 minDate: new Date(2025, 0, 1),
                 maxDate: new Date(2035, 11, 31),
+                onSelect: function () {
+                    updateExpiryDate();
+                }
             });
+
+            var startVal = $("#BatchStartDate").val();
+            if (startVal) {
+                $("#BatchStartDate").datepicker("setDate", startVal);
+            }
+            // Expiry Date Datepicker
+            $("#BatchExpireDate").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
+                language: "en",
+                autoSize: true,
+                yearRange: "2022:2035",
+                minDate: new Date(2025, 0, 1),
+                maxDate: new Date(2035, 11, 31)
+            });
+            updateExpiryDate(); 
         });
+
         $('form').submit(function (e) {
             var hours = $('#DurationHours').val();
             var minutes = $('#DurationMinutes').val();
@@ -189,8 +213,8 @@
                                     validationSpan.text("Please select at least one Week Day.");
                                     validationSpan.addClass("field-validation-error").removeClass("field-validation-valid");
                                     e.preventDefault();
-                        }
-                   }
+                           }
+                    }
             });
     </script>
 }
