--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/UserProfile.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/UserProfile.cshtml
@@ -146,14 +146,21 @@
                             <div class="form-group mb-2">
                                 @Html.LabelFor(x => x.CurrentPassword, new { @class = "form-label required" })
                                 <div class="input-group">
-                                    @Html.PasswordFor(x => x.CurrentPassword, new { @class = "form-control" })
+                                    @Html.PasswordFor(x => x.CurrentPassword, new { @class = "form-control", placeholder = "Current Password" })
                                 </div>
                                 @Html.ValidationMessageFor(m => m.CurrentPassword, null)
                             </div>
                             <div class="form-group mb-2">
                                 @Html.LabelFor(x => x.NewPassword, new { @class = "form-label required" })
-                                <div class="input-group">
-                                    @Html.PasswordFor(x => x.NewPassword, new { @class = "form-control" })
+                                <div class="input-group password-input-wraper">
+                                    @Html.PasswordFor(x => x.NewPassword, new {
+                                    @class = "form-control password-input tooltip-square",
+                                                                        type = "password",
+                                                                        placeholder = "Enter New Password",
+                                                                        title = GeneralResources.PasswordRulesTooltip,
+                                                                        data_bs_toggle = "tooltip"
+                                                                        })
+                                    <i class="fas fa-eye view-password ms-2" title="Show/Hide Password"></i>
                                 </div>
                                 @Html.ValidationMessageFor(m => m.NewPassword, null)
                             </div>
@@ -275,15 +282,28 @@
         //     return new Date(birthYear, 0, 1);
         // }
 
-         // View PassWord
-         $(".view-password").click(function () {
-                $(this).toggleClass("fa fa-eye-slash");
-                var inputAttribute = $('.password-input');
-                if (inputAttribute.attr("type") == "password") {
-                    inputAttribute.attr("type", "text");
-                } else {
-                    inputAttribute.attr("type", "password");
+
+            //  Initialize Bootstrap tooltips
+            var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+            var tooltipList = tooltipTriggerList.map(function (el) {
+                return new bootstrap.Tooltip(el);
+            });
+
+            //  Hide tooltip when typing starts
+            $(".password-input").on("input", function () {
+                var tooltipInstance = bootstrap.Tooltip.getInstance(this);
+                if (tooltipInstance) {
+                    tooltipInstance.hide();
                 }
+            });
+
+            // Toggle password visibility
+            $(".view-password").click(function () {
+                $(this).toggleClass("fa-eye fa-eye-slash");
+
+                var input = $(this).siblings(".password-input");
+                var type = input.attr("type") === "password" ? "text" : "password";
+                input.attr("type", type);
             });
 
           // Change Password Handler
